k8s-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weblogic-cluster-service
spec:
  type: ClusterIP
  selector:
    app: weblogic
  ports:
  - protocol: TCP
    port: 80
    targetPort: 7001
