k8s-deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  generation: 1
  labels:
    app: weblogic
  name: weblogic-ingress
  namespace: default
spec:
  rules:
  - host: enjaz.aotsa.ml
    http:
      paths:
      - backend:
          service:
            name: weblogic-cluster-service
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - enjaz.aotsa.ml
    secretName: enjaz-tls-ingress
